lib/tests/fixtures/compiler/parser/next_in_site.baseline
Error: next_in_site.pp:3:9: next statement cannot be used inside a site statement.
  next
  ^~~~
